# ComfyUI-Upscaler-Tensorrt

./: LICENSE  README.md  __init__.py  export_onnx.py  export_trt.py  export_trt_from_directory.py  load_upscaler_config.json  pyproject.toml  requirements.txt  trt_utilities.py  utilities.py
assets/: tensorrt_upscaling_workflow.json
js/: app.js
scripts/: export_onnx.py  export_trt.py  export_trt_from_directory.py
